# Axis

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  biome.json  eslint.config.js  knip.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: SECURITY.md  dependabot.yml  release.yml
.github/workflows/: checks.yml  docs.yml  e2e.yml  integration.yml  nightly.yml  release.yml  tests.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/guide/: ai-commits.md  bisect.md  branches.md  cherry-pick.md  commit-signing.md  custom-actions.md  first-repository.md  git-hooks.md  git-lfs.md  gitflow.md  github-integration.md  history-blame.md  index.md  installation.md  keyboard-shortcuts.md  merging-rebasing.md  reflog.md  settings.md  ssh-keys.md  staging-commits.md  stashing.md  submodules.md  worktrees.md
docs/public/: BingSiteAuth.xml  CNAME  llms.txt  robots.txt
e2e/: tsconfig.json  wdio.conf.ts  wdio.linux.conf.ts  wdio.mac.conf.ts  wdio.win.conf.ts
e2e/helpers/: context.ts  git-fixture.ts  selectors.ts
e2e/specs/: branch.spec.ts  commit.spec.ts  diff.spec.ts  history.spec.ts  init-repository.spec.ts  staging.spec.ts  stash.spec.ts  unstage.spec.ts  welcome.spec.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  state.rs
src-tauri/src/commands/: ai.rs  avatar.rs  bisect.rs  branches.rs  custom_actions.rs  diff.rs  gitflow.rs  gitignore.rs  graph.rs  hooks.rs  integrations.rs  lfs.rs  merge.rs  mod.rs  patches.rs  reflog.rs  remotes.rs  repo_settings.rs  repository.rs  search.rs  settings.rs  signing.rs  ssh_keys.rs  staging.rs  stash.rs  submodules.rs  tags.rs  update.rs  worktrees.rs
src-tauri/src/events/: file_watcher.rs  git_progress.rs  hook_progress.rs  integrations.rs  menu.rs  mod.rs  update.rs
src-tauri/src/models/: ai.rs  avatar.rs  bisect.rs  branch.rs  commit.rs  custom_actions.rs  diff.rs  file_status.rs  gitflow.rs  gitignore.rs  graph.rs  hooks.rs  integration.rs  lfs.rs  merge.rs  mod.rs  patches.rs  reflog.rs  remote.rs  repo_settings.rs  repository.rs  settings.rs  signing.rs  ssh_keys.rs  stash.rs  submodule.rs  tag.rs  update.rs  worktree.rs
src-tauri/src/services/: avatar_service.rs  background_fetch.rs  commit_cache.rs  custom_actions_service.rs  file_watcher.rs  git2_service.rs  git_cli_service.rs  git_service.rs  hook_progress.rs  hook_service.rs  mod.rs  process_utils.rs  progress_emitter.rs  signature_cache.rs  signing_service.rs  ssh_key_service.rs
src-tauri/src/services/ai/: anthropic.rs  mod.rs  ollama.rs  openai.rs  prompt.rs  provider.rs
src-tauri/src/services/integrations/: cache.rs  mod.rs  provider.rs  service.rs
src-tauri/src/services/integrations/github/: mod.rs  oauth.rs
src-tauri/src/services/ops/: bisect.rs  branches.rs  diff.rs  gitflow.rs  gitignore.rs  graph.rs  grep.rs  hooks.rs  lfs.rs  merge.rs  mod.rs  patches.rs  reflog.rs  remotes.rs  repository.rs  staging.rs  stash.rs  submodules.rs  tags.rs  worktrees.rs
src-tauri/src/storage/: database.rs
src-tauri/tests/: git_bisect.rs  git_branches.rs  git_diff.rs  git_gitignore.rs  git_graph.rs  git_grep.rs  git_hooks.rs  git_merge.rs  git_patches.rs  git_pull.rs  git_reflog.rs  git_remotes.rs  git_repository.rs  git_staging.rs  git_stash.rs  git_submodules.rs  git_tags.rs  git_worktrees.rs
src-tauri/tests/common/: mod.rs
src/bindings/: api.ts
src/components/: WelcomeView.css  WelcomeView.test.tsx  WelcomeView.tsx
(+388 files in other folders)
