[package]
name = "axis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "axis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notifications = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git operations
git2 = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
shellexpand = "3.1"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
flate2 = "1"
bzip2 = "0.6"

# File watching
notify = "6"

# Typescript generation
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive", "chrono"] }
specta-typescript = "0.0.9"
